--- a/static/apps.html
+++ b/static/apps.html
@@ -39,6 +39,7 @@
     <div class="pinned-apps"></div>
     <div class="container-apps"></div>
     <script src="/assets/scripts/main.js?v=30"></script>
+    <script async src="https://arc.io/widget.min.js#BgaWcYfi"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
     <!-- DO NOT REMOVE-->
     <script>
