--- a/static/go.html
+++ b/static/go.html
@@ -69,6 +69,7 @@
     <script src="./m/bundle.js?v=5"></script>
     <script src="./m/config.js?v=5"></script>
     <script src="assets/scripts/frame.js?v=36"></script>
+    <script async src="https://arc.io/widget.min.js#BgaWcYfi"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
     <script>
       window.dataLayer = window.dataLayer || []
