--- a/static/tabs.html
+++ b/static/tabs.html
@@ -93,6 +93,7 @@
     <script src="./m/bundle.js?v=4"></script>
     <script src="./m/config.js?v=3"></script>
     <script src="/assets/scripts/main.js?v=31"></script>
+    <script async src="https://arc.io/widget.min.js#BgaWcYfi"></script>
     <!-- DO NOT REMOVE-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
     <script>
