--- a/static/settings.html
+++ b/static/settings.html
@@ -178,7 +178,7 @@
     </div>
     <script src="/assets/scripts/main.js?v=31"></script>
     <script src="/assets/scripts/settings.js?v=21"></script>
-    <script async src="https://arc.io/widget.min.js#BgaWcYfi"></script>
+    <script async src="https://arc.io/widget.min.js#qLBEDkrd"></script>
     <!-- DO NOT REMOVE-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
     <script>
