--- a/static/tos.html
+++ b/static/tos.html
@@ -195,7 +195,7 @@
 <script src="/assets/scripts/main.js?v=31"></script>
 <!-- DO NOT REMOVE-->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
-<script async src="https://arc.io/widget.min.js#BgaWcYfi"></script>
+<script async src="https://arc.io/widget.min.js#qLBEDkrd"></script>
 <script>
   window.dataLayer = window.dataLayer || []
   function gtag() {
